baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Point {
  x: int
  y: int
}
function user.boolArray() -> bool[]  [expr] {
  {  } [true, false, true]
}
function user.floatArray() -> float[]  [expr] {
  {  } [1.0, 2.0, 3.0]
}
function user.from_json(j: baml.json.json) -> user.Point  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.intArray() -> int[]  [expr] {
  {  } [1, 2, 3]
}
function user.mixedArray() -> int | string[]  [expr] {
  {  } [1, "two", 3]
}
function user.pointArray() -> user.Point[]  [expr] {
  {  } [user.Point { x: 1, y: 2 }, user.Point { x: 3, y: 4 }, user.Point { x: 5, y: 6 }]
}
function user.stringArray() -> string[]  [expr] {
  {  } ["hello", "world", "test"]
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "x": self.x.to_json(), "y": self.y.to_json() }
}
class user.Point {
  x: int
  y: int
}
class user.Vec2D {
  p: user.Point
  q: user.Point
}
function user.from_json(j: baml.json.json) -> user.Point  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Vec2D  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.point() -> user.Point  [expr] {
  {  } user.Point { x: 1, y: 2 }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "p": self.p.to_json(), "q": self.q.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "x": self.x.to_json(), "y": self.y.to_json() }
}
function user.vec2d() -> user.Vec2D  [expr] {
  {  } user.Vec2D { p: user.Point { x: 1, y: 2 }, q: user.Point { x: 3, y: 4 } }
}
function user.boolValues() -> map<string, bool>  [expr] {
  {  } map { "hello": true, "test": false }
}
function user.floatValues() -> map<string, float>  [expr] {
  {  } map { "hello": 1.0, "test": 2.0 }
}
function user.intValues() -> map<string, int>  [expr] {
  {  } map { "hello": 1, "test": 2 }
}
function user.stringValues() -> map<string, string>  [expr] {
  {  } map { "hello": "world", "test": "test" }
}
