baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Point {
  x: int
  y: int
}
function user.Point.to_json(self: user.Point) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "x": self.x.to_json(), "y": self.y.to_json() } : map<string, baml.json.json>
}
function user.Point.from_json(j: baml.json.json) -> user.Point throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Point
}
function user.stringArray() -> string[] throws never {
  { : string[]
    ["hello", "world", "test"] : string[]
  }
}
function user.intArray() -> int[] throws never {
  { : int[]
    [1, 2, 3] : int[]
  }
}
function user.floatArray() -> float[] throws never {
  { : float[]
    [1.0, 2.0, 3.0] : float[]
  }
}
function user.boolArray() -> bool[] throws never {
  { : bool[]
    [true, false, true] : bool[]
  }
}
function user.pointArray() -> user.Point[] throws never {
  { : user.Point[]
    [Point { x: 1, y: 2 }, Point { x: 3, y: 4 }, Point { x: 5, y: 6 }] : user.Point[]
  }
}
function user.mixedArray() -> (int | string)[] throws never {
  { : (int | string)[]
    [1, "two", 3] : (int | string)[]
  }
}
class user.Point$stream {
  x: null | int
  y: null | int
}
class user.Point {
  x: int
  y: int
}
function user.Point.to_json(self: user.Point) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "x": self.x.to_json(), "y": self.y.to_json() } : map<string, baml.json.json>
}
function user.Point.from_json(j: baml.json.json) -> user.Point throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Point
}
class user.Vec2D {
  p: user.Point
  q: user.Point
}
function user.Vec2D.to_json(self: user.Vec2D) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "p": self.p.to_json(), "q": self.q.to_json() } : map<string, baml.json.json>
}
function user.Vec2D.from_json(j: baml.json.json) -> user.Vec2D throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Vec2D
}
function user.point() -> user.Point throws never {
  { : user.Point
    Point { x: 1, y: 2 } : user.Point
  }
}
function user.vec2d() -> user.Vec2D throws never {
  { : user.Vec2D
    Vec2D { p: Point { x: 1, y: 2 }, q: Point { x: 3, y: 4 } } : user.Vec2D
  }
}
class user.Point$stream {
  x: null | int
  y: null | int
}
class user.Vec2D$stream {
  p: null | user.Point$stream
  q: null | user.Point$stream
}
function user.stringValues() -> map<string, string> throws never {
  { : map<string, string>
    map { "hello": "world", "test": "test" } : map<string, string>
  }
}
function user.intValues() -> map<string, int> throws never {
  { : map<string, int>
    map { "hello": 1, "test": 2 } : map<string, int>
  }
}
function user.floatValues() -> map<string, float> throws never {
  { : map<string, float>
    map { "hello": 1.0, "test": 2.0 } : map<string, float>
  }
}
function user.boolValues() -> map<string, bool> throws never {
  { : map<string, bool>
    map { "hello": true, "test": false } : map<string, bool>
  }
}
