baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 35720
---
=== COMPILER2 DIAGNOSTICS ===
  [validation] Error: Duplicate class `Point`
   ╭─[ array_constructor.baml:1:7 ]
   │
 1 │ class Point {
   │       ──┬──  
   │         ╰──── first defined as class here
   │
   ├─[ class_constructor.baml:1:7 ]
   │
 1 │ class Point {
   │       ──┬──  
   │         ╰──── duplicate class definition
   │ 
   │ Note: Error code: E0011
───╯
