baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__diagnostic_errors__parser_constructors__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.boolArray() -> bool[] {
    load_const true
    load_const false
    load_const true
    alloc_array 3
    return
}

function user.boolValues() -> map<string, bool> {
    load_const true
    load_const false
    load_const "hello"
    load_const "test"
    alloc_map 2
    return
}

function user.floatArray() -> float[] {
    load_const 1.0
    load_const 2.0
    load_const 3.0
    alloc_array 3
    return
}

function user.floatValues() -> map<string, float> {
    load_const 1.0
    load_const 2.0
    load_const "hello"
    load_const "test"
    alloc_map 2
    return
}

function user.intArray() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    return
}

function user.intValues() -> map<string, int> {
    load_const 1
    load_const 2
    load_const "hello"
    load_const "test"
    alloc_map 2
    return
}

function user.mixedArray() -> (int | string)[] {
    load_const 1
    load_const "two"
    load_const 3
    alloc_array 3
    return
}

function user.point() -> Point {
    alloc_instance user.Point
    load_const 1
    init_field .x
    load_const 2
    init_field .y
    return
}

function user.pointArray() -> Point[] {
    alloc_instance user.Point
    load_const 1
    init_field .x
    load_const 2
    init_field .y
    alloc_instance user.Point
    load_const 3
    init_field .x
    load_const 4
    init_field .y
    alloc_instance user.Point
    load_const 5
    init_field .x
    load_const 6
    init_field .y
    alloc_array 3
    return
}

function user.stringArray() -> string[] {
    load_const "hello"
    load_const "world"
    load_const "test"
    alloc_array 3
    return
}

function user.stringValues() -> map<string, string> {
    load_const "world"
    load_const "test"
    load_const "hello"
    load_const "test"
    alloc_map 2
    return
}

function user.vec2d() -> Vec2D {
    alloc_instance user.Vec2D
    alloc_instance user.Point
    load_const 1
    init_field .x
    load_const 2
    init_field .y
    init_field .p
    alloc_instance user.Point
    load_const 3
    init_field .x
    load_const 4
    init_field .y
    init_field .q
    return
}
